php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #48377 error message unclear on converting phar with existing file
Submitted: 2009-05-24 19:13 UTC Modified: 2009-07-23 17:04 UTC
From: cellog@php.net Assigned: cellog (profile)
Status: Closed Package: PHAR related
PHP Version: 5.3CVS-2009-05-24 (CVS) OS: n/a
Private report: No CVE-ID: None
 [2009-05-24 19:13 UTC] cellog@php.net
Description:
------------
if one is converting from a tar P1-1.0.0.tar to P1-1.0.0.tgz, the error message says the file extension is invalid, when in fact the problem is that the file exists and must be deleted prior to converting.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2009-07-23 17:04 UTC] svn@php.net
Automatic comment from SVN on behalf of cellog
Revision: http://svn.php.net/viewvc/?view=revision&revision=284660
Log: fix PHP Bug #48377: error message unclear on converting phar with existing file
 [2009-07-23 17:04 UTC] cellog@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 [2009-07-23 17:07 UTC] svn@php.net
Automatic comment from SVN on behalf of cellog
Revision: http://svn.php.net/viewvc/?view=revision&revision=284660
Log: fix PHP Bug #48377: error message unclear on converting phar with existing file
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC