fix PHP Bug #48377: error message unclear on converting phar with existing file

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/branches/PHP_5_3@284660 c90b9560-bf6c-de11-be94-00142212c4b1